apps/test/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: test
spec:
  parentRefs:
    - kind: Gateway
      name: istio-ingressgateway
      namespace: istio-system
  hostnames:
    - "httpbin.jzzi.ru"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: httpbin
          port: 80
